# LargeGraphs

./: .gitignore  CMakeLists.txt  Makefile  README.md
data_test/: toy.txt
src/: Edge.hpp  Graph.cpp  Graph.hpp  main.cpp
src/graph/: EdgeListGraph.cpp  EdgeListGraph.hpp  Graph.cpp  Graph.hpp
src/graph/elements/: Edge.hpp
src/utils/: FileUtils.cpp  FileUtils.hpp  MathUtils.hpp
test/: CMakeLists.txt  FileUtilsTest.cpp  GraphTest.cpp  ReadEdgeListGraphTest.cpp  ReadGraphTest.cpp
test/data_test/: duplicates.txt  nonContinuous.txt  out_duplicates.txt  toy.txt  wrongFormat.txt
